--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     ports:
       - "${WEB_PORT}:8069"
       - "${WEBSOCKET_PORT}:8072"
+    environment:
+      - HOST=${DB_HOST}
     volumes:
       - odoo-web-data:/var/lib/odoo
       - ./config:/etc/odoo
